# fad_project

./: .gitignore  CMakeLists.txt  Jon_Test  README.md  notes.txt  script.bat  sdkconfig  sdkconfig.old  workspace.code-workspace
esp32-fft-master/main/: test_fft.c
esp_program/: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
esp_program/main/: CMakeLists.txt  fad_timer.c
esp_tests/: .gitignore  sdkconfig  sdkconfig.old
esp_tests/main/: main.c
fad_algorithms/: CMakeLists.txt  README.md  algo_delay.c  algo_delay_copy.c  algo_freq_shift.c  algo_masking.c  algo_template copy.c  algo_template.c  algo_test.c  algo_white.c  fad_algos.h
fad_algorithms/include/: algo_delay.h  algo_delay_copy.h  algo_freq_shift.h  algo_masking.h  algo_template copy.h  algo_template.h  algo_test.h  algo_white.h  (+1 more)
fad_project_bt/: .project  CMakeLists.txt  README.md  notes.txt  sdkconfig
fad_project_bt/main/: CMakeLists.txt  fad_adc.c  fad_app_core.c  fad_bt_gap.c  fad_bt_main.c  fad_dac.c  fad_gpio.c  fad_timer.c  main.c  main_old.c  main_original.c
fad_project_bt/main/include/: fad_adc.h  fad_app_core.h  fad_bt_gap.h  fad_bt_main.h  fad_gpio.h  fad_timer.h  main.h
main/: CMakeLists.txt  app_hf_msg_set.c  fad_adc.c  fad_adc.h  fad_app_core.c  fad_app_core.h  fad_dac.c  fad_dac.h  fad_defs.h  fad_timer.c  main.c
main/fad_algorithms/: algo_template.c  algo_test.c  algo_white.c
uart_tester/: .gitignore  2021-01-2ALGO_DELAY.txt  README.md  dsp_tools.py  esp_com.py  main.py  requirements.txt  test.csv  test.py
uart_tester_esp/: .gitignore  CMakeLists.txt  Makefile
(+10 files in other folders)
