idf_component_register(SRCS "fad_app_core.c"
                            "main.c"
                            "fad_adc.c"
                            "fad_adc.c"
                            "fad_algorithms/algo_white.c"
                            "fad_algorithms/algo_test.c"
                            "fad_defs.h"
                            "fad_dac.c"
                    INCLUDE_DIRS ".")