idf_component_register(SRCS "bt_app_core.c"
                            "fad_app_core"
                            "main.c"
                            "fad_adc.c"
                            "fad_adc.c"
                            "fad_dac.c"
                            "fad_timer.c"
                    INCLUDE_DIRS "include")
