idf_component_register(SRCS "fad_app_core"
                            "main.c"
                            "fad_adc.c"
                            "fad_adc.c"
                            "fad_dac.c"
                            "fad_timer.c"
                            "fad_bt_gap.c"
                            "fad_bt_main.c"
                    INCLUDE_DIRS "include")
